<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingEnd="16dp"
    android:paddingStart="20dp"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/nameFlowers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/flowers"
        android:layout_margin="8dp"
        android:textSize="18sp"
        android:textColor="@color/blue"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/age"
        />
    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:textSize="14sp"
        android:layout_margin="8dp"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameFlowers"
        />
    <TextView
        android:id="@+id/family"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/family"
        android:textSize="18sp"
        android:layout_margin="8dp"
        android:textColor="@color/blue"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age" />

</androidx.constraintlayout.widget.ConstraintLayout>