<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/flowersList"
    tools:context=".screen.ListFlowersFragment">

    <LinearLayout
        android:id="@+id/greeting_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/flowers_image"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:src="@drawable/flowers_vector"

            />

        <TextView
            android:id="@+id/my_flowers_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/my_flowers"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/add_your_flower_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="24dp"
            android:singleLine="false"
            android:text="@string/add_your_flower"
            android:textColor="@color/grey"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/down_arrow_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/down_arrow"
            android:textColor="@color/grey"
            android:textSize="64sp" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:backgroundTint="@color/khaki"
        app:fabAlignmentMode="center"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_add_24"
        app:layout_anchor="@id/appbar"
        app:backgroundTint="@color/pink_80"
         />

</androidx.coordinatorlayout.widget.CoordinatorLayout>