<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".screen.AddFlowerFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/MyTextLabel"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:background="@color/purple_grey_40"
        android:hint="@string/flowers"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/flower_name_text_input_edit_text"
            android:textCursorDrawable="@drawable/color_cursor"
            app:boxStrokeColor="@color/purple_grey_80"
            android:background="@color/white"
            android:fontFamily="sans-serif-condensed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/MyTextLabel"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:background="@color/purple_grey_40"
        android:hint="@string/age"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/flower_age_text_input_edit_text"
            android:textCursorDrawable="@drawable/color_cursor"
            app:boxStrokeColor="@color/purple_grey_80"
            android:background="@color/white"
            android:fontFamily="sans-serif-condensed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp">
        <Spinner
            android:id="@+id/family_spinner"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-condensed"
            android:backgroundTint="@color/grey"
            android:textAlignment="textStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/add_chip"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
             />
        <com.google.android.material.chip.Chip
            android:id="@+id/add_chip"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            app:chipIcon="@drawable/baseline_add_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/family_spinner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/add_flower_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_flower"
        />



</LinearLayout>